# cmake-starter

./: .clang-format  CMakeLists.txt  README.md
include/: boilerplate.h
scripts/: build.sh
src/: boilerplate.cpp  main.cpp
